# substrate-evm_account_mapping

./: .gitignore  Cargo.toml  README.md  run_benchmarks.sh  rust-toolchain.toml
demo/: package.json
demo/src/app/: Stage.tsx  layout.tsx
docs/: main.ts  poc-evm_transparent_mapping.ts  poc-full.ts  poc-pre_signed_cheque.ts  poc.ts
frontend-sdk/src/: eip712.ts  index.ts
node/: Cargo.toml
node/src/: benchmarking.rs  command.rs  service.rs
pallets/account_abstraction/: Cargo.toml
pallets/account_abstraction/src/: benchmarking.rs  eip712.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/evm_account_mapping/: Cargo.toml
pallets/evm_account_mapping/src/: benchmarking.rs  eip712.rs  encode.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
substrate/frame/support/: Cargo.toml
substrate/frame/support/src/traits/tokens/: misc.rs
